--- a/AndroidApp/res/layout/activity_routelist.xml
+++ b/AndroidApp/res/layout/activity_routelist.xml
@@ -18,7 +18,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <ListView
-            android:id="@+id/routelistList"
+            android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
         </ListView>
