--- a/AndroidApp/res/layout/activity_main.xml
+++ b/AndroidApp/res/layout/activity_main.xml
@@ -2,13 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" 
-    android:gravity="center"
-    android:orientation="vertical" >
+    tools:context=".MainActivity" >
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="243dp"
+        android:layout_height="148dp"
+        android:contentDescription="DAV Logo"
+        android:src="@drawable/dav_logo"
+        tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/routedetailsTitle"
