Routen/User-Details und Bewertung, DB Changes
Anzeige von Routendetails und Persönliche Details
Bewertung von Routen funktionstüchtig (ToDo: Jede Route nur einmalig
bewerten pro Benutzer)
Einige Änderungen an der lokalen und entfernten DB. Diese in der WebAPI
umgesetzt.
Neue Funktion getUiaa in DB Connector und WebAPI um die uid der Uiaa
bewertungen für Bewertungs Strings zu bekommen.

--- a/AndroidApp/res/layout/activity_rateroute.xml
+++ b/AndroidApp/res/layout/activity_rateroute.xml
@@ -32,13 +32,7 @@
 
             <Spinner
                 android:id="@+id/raterouteRating1"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_weight="1" />
-
-            <Spinner
-                android:id="@+id/raterouteRating2"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1" />
 
