--- a/AndroidApp/res/layout/activity_personaldetails.xml
+++ b/AndroidApp/res/layout/activity_personaldetails.xml
@@ -18,7 +18,7 @@
             android:text="@string/personal_title"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center" >
@@ -34,11 +34,12 @@
                 android:id="@+id/personalUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center" >
@@ -54,10 +55,11 @@
                 android:id="@+id/personalRoutecount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center" >
@@ -73,10 +75,11 @@
                 android:id="@+id/personalFlashcount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center" >
@@ -92,10 +95,11 @@
                 android:id="@+id/personalRotpunktcount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center" >
@@ -111,7 +115,8 @@
                 android:id="@+id/personalNotclimbedcount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
