--- a/AndroidApp/res/layout/activity_register.xml
+++ b/AndroidApp/res/layout/activity_register.xml
@@ -43,7 +43,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/TextView01"
+                android:id="@+id/routedetailsOwnCategorieLable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/register_email"
@@ -86,7 +86,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/TextView03"
+                android:id="@+id/routedetailsOwnHowClimbedLable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/register_password2"
